partie_mobile partie view Liste des site

--- a/Madagascar/app/src/main/res/values/strings.xml
+++ b/Madagascar/app/src/main/res/values/strings.xml
@@ -1,5 +1,3 @@
 <resources>
-    <string name="app_name">Madagascar</string>
-    <string name="title">Membership Form</string>
-
+    <string name="app_name">judoASSM</string>
 </resources>
