--- a/Madagascar/app/src/main/res/values/strings.xml
+++ b/Madagascar/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="mdp">Votre mot de passe</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="apiUrl">http://192.168.1.113:3000/</string>
 
 </resources>
